# piper-phonemize

./: CMakeLists.txt  espeak-ng.patch
